--- a/expo/package.json
+++ b/expo/package.json
@@ -14,7 +14,10 @@
     },
     "dependencies": {
         "@expo/samples": "2.1.1",
+        "@unimodules/react-native-adapter": "^2.0.1",
         "expo": "^31.0.2",
+        "expo-location": "^5.0.1",
+        "expo-permissions": "^5.0.1",
         "firebase": "^6.2.4",
         "react": "16.5.0",
         "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
@@ -24,6 +27,7 @@
         "redux-thunk": "^2.3.0"
     },
     "devDependencies": {
+        "@unimodules/core": "^2.0.1",
         "babel-eslint": "^10.0.2",
         "babel-preset-expo": "^5.0.0",
         "eslint": "^6.0.1",
