--- a/expo/package.json
+++ b/expo/package.json
@@ -19,6 +19,7 @@
         "expo-location": "^5.0.1",
         "expo-permissions": "^5.0.1",
         "firebase": "^6.2.4",
+        "galio-framework": "^0.5.3",
         "react": "16.5.0",
         "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
         "react-navigation": "^2.18.2",
