--- a/expo/package.json
+++ b/expo/package.json
@@ -13,6 +13,7 @@
         "preset": "jest-expo"
     },
     "dependencies": {
+        "@eva-design/eva": "^1.0.1",
         "@expo/samples": "2.1.1",
         "@unimodules/react-native-adapter": "^2.0.1",
         "expo": "^31.0.2",
@@ -22,6 +23,7 @@
         "galio-framework": "^0.5.3",
         "react": "16.5.0",
         "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+        "react-native-ui-kitten": "^4.1.0",
         "react-navigation": "^2.18.2",
         "react-redux": "^6.0.1",
         "redux": "^4.0.3",
